[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/CityNameDialog.gd" id="1"]

[node name="CityNameDialog" type="Window"]
title = "Found City"
initial_position = 2
size = Vector2i(300, 150)
visible = false
transient = true
exclusive = true
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBox"]
layout_mode = 2
text = "Enter a name for your new city:"

[node name="NameInput" type="LineEdit" parent="VBox"]
layout_mode = 2
placeholder_text = "City name..."
max_length = 20

[node name="ErrorLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 12
text = ""

[node name="Spacer" type="Control" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="Buttons" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="CancelButton" type="Button" parent="VBox/Buttons"]
custom_minimum_size = Vector2(80, 30)
layout_mode = 2
text = "Cancel"

[node name="Spacer" type="Control" parent="VBox/Buttons"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ConfirmButton" type="Button" parent="VBox/Buttons"]
custom_minimum_size = Vector2(80, 30)
layout_mode = 2
text = "Found"
